2003-10-29  Paul Eggert  <eggert@twinsun.com>

	* getgroups.c (getgroups): Don't use xrealloc, since we don't need
	the buffer preserved.  Use free and xmalloc instead.
	* quotearg.c (quotearg_n_options): Likewise.
	Use a simpler test for size overflow.  Don't use xalloc_oversized
	because unsigned int might be wider than size_t (!); this suggests
	that we should switch from unsigned int to size_t for slot numbers.
	
2003-10-27  Bruno Haible  <bruno@clisp.org>

	* stdbool_.h: Better support for BeOS.

2003-10-27  Paul Eggert  <eggert@twinsun.com>

	* exclude.c (new_exclude): Use xzalloc rather than xmalloc
	to allocate the returned structure.  Do not allocate a subarray,
	as x2nrealloc will do that.
	(add_exclude): Use x2nrealloc to reallocate ex->exclude,
	instead of xnrealloc.
	(add_exclude_file): Use x2realloc instead of malloc + xnrealloc.
	
2003-10-26  Paul Eggert  <eggert@twinsun.com>

	* xalloc.h (xalloc_oversized): New static inline function, for
	callers that want to do their own size-overflow checking.  Include
	<stdbool.h>, since xalloc_oversized returns bool.
	* xalloc.c (array_size_overflow): Remove.  All callers changed
	to use xalloc_oversized.

	Add two functions x2realloc, x2nrealloc, for programs that grow
	arrays dynamically by doubling their sizes.
	* xalloc.h (x2realloc, x2nrealloc): New decls.
	* xmalloc.c (x2nrealloc_inline, x2nrealloc, x2realloc):
	New functions.

	Port to C99 semantics for 'inline' of external functions.
	Bug reported by Bruno Haible.
	* xmalloc.c (xnmalloc_inline): New static inline function,
	with the old contents of xnmalloc.
	(xnmalloc, xmalloc): Use it.
	(xnrealloc_inline): New static inline function,
	with the old contents of xnrealloc.
	(xnrealloc, xrealloc): Use it.

	* alloc.c (alloca): xmalloc cannot return NULL, so don't test for that.

2003-10-25  Paul Eggert  <eggert@twinsun.com>

	Fix several address-calculation bugs in the hash modules,
	plus some minor code cleanup.

	* hash.h: Include <stdbool.h>, for bool.